add sampled data and loader